--- a/my react app/src/index.css
+++ b/my react app/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap');
 body {
-  padding-left: 180px;
+  padding-left: 150px;
   padding-right: 130px;
   font-family: "Kumbh Sans", sans-serif;
   font-optical-sizing: auto;
@@ -253,4 +253,75 @@ h1{
 }
 .text{
   font-weight: 600;
+}
+.cartbody{
+  display: flex;
+  flex-direction: column;
+}
+.cartbody *{
+  margin-left: 20px;
+}
+.cartbody1{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 250px;
+}
+.cartbody11{
+  display: none;
+}
+.cartbody2{
+  display: flex;
+  flex-direction: row;
+ 
+}
+.cartbody2 *{
+  margin-right: 10px;
+  margin-left: 0px;
+}
+.logoo{
+  height: 45px;
+  width: 45px;
+  border-radius: 3px;
+}
+.line{
+  width: 300px;
+  margin-left: 0px;
+}
+.cartbody3{
+  margin-top: -17px;
+}
+.cartbody3 *{
+  font-size: 15px;
+  opacity: 70%;
+  font-weight: 300;
+}
+.text1{
+  font-size: 15px;
+  opacity: 50%;
+  margin-bottom: -10px;
+}
+.buttonn{
+  margin-top: 20px;
+  background-color: hsl(26, 100%, 55%);
+  width: 250px;
+  margin-left: -50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 45px;
+  border-radius: 10px;
+  opacity: 100%;
+  border: none;
+}
+.buttonn:hover{
+  background-color: hsl(26, 70%, 45%);
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+.buttonn1{
+ font-weight: 700;
+ font-size: 13px;
+  
 }
