--- a/my react app/src/index.css
+++ b/my react app/src/index.css
@@ -42,6 +42,7 @@ body {
   object-fit: cover;
   transition: border-color 0.3s ease;
   margin-top: 16px;
+  margin-left: 20px;
 }
 
 #avatar:hover {
@@ -60,7 +61,7 @@ body {
 hr{
   opacity: 40%;
   margin-top: 8px;
-  width: 1025px;
+  width: 1045px;
   margin-left: 0px;
 }
 .headings:hover{
@@ -89,6 +90,7 @@ hr{
 }
 .random{
   margin-top: -17px;
+  z-index: 10;
 }
 .contact{
   margin-right: 280px;
@@ -256,7 +258,7 @@ h1{
 }
 .cartbody{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 .cartbody *{
   margin-left: 20px;
@@ -266,9 +268,33 @@ h1{
   flex-direction: column;
   width: 300px;
   height: 250px;
+  position: absolute;
+  margin-top: 70px;
+  margin-left: -120px;
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 2px 2px 2px 2px rgb(219, 207, 207);
+  z-index: 10;
+  border-radius: 5px;
 }
 .cartbody11{
   display: none;
+}
+.cartbody111{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 250px;
+  position: absolute;
+  margin-top: 70px;
+  margin-left: -120px;
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 2px 2px 2px 2px rgb(219, 207, 207);
+  z-index: 10;
+  border-radius: 5px;
+}
+.cartbody112{
+  display: none;
+  visibility: hidden;
 }
 .cartbody2{
   display: flex;
@@ -324,4 +350,13 @@ h1{
  font-weight: 700;
  font-size: 13px;
   
+}
+.empty{
+  margin-left: 85px;
+  margin-top: 65px;
+  
+}
+.okk{
+  font-weight: 790;
+  opacity: 100%;
 }
